# E312IMUTest

./: .gitignore  CMakeLists.txt  E312IMUTest  README.md
config/: RTIMULib.ini
source/: main.cpp
